src/test/deca/context/invalid/test_pass_3_opBool_not_good_type.deca
// Description:
//    Program testing that you can not do a boolean operation with a right or left operand that can not be operated
//
// Results:
//    error
//
// History:
//    Created on 9/01/2025

{
    boolean x = 4 > true;
}
